--- a/css/zhn-select.css
+++ b/css/zhn-select.css
@@ -4,19 +4,19 @@
   display: inline-block;
   background-color: #e1e1cb;
   width: 160px;
+  border-radius: 2px;
 }
 
 .zhn-select__input {
-  background: transparent none repeat scroll 0 0;
-  border: medium none;
-  outline: medium none;
-  height: 30px;
-  padding-left: 10px;
+  background: 0 0;
+  border: none;
+  outline: 0;
+  height: 38px;
   color: green;  
   width: 100%;
-  padding-right: 40px;
+  padding: 0 40px 0 10px;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 
@@ -54,6 +54,7 @@
   stroke-linecap: round;
 }
 
+/*
 .zhn-select__input__hr {
   border-width: medium medium 1px;
   border-style: none none solid;
@@ -64,6 +65,7 @@
   margin-bottom: 5px;
   margin-right: 40px;
 }
+*/
 
 .zhn-select__options {
   z-index: 10;
@@ -129,7 +131,4 @@
   right: 8px;
   color: black;
   font-weight: bold;
-}
-.zhn-select__footer--margin {
-  margin-right: 4px;
 }
